style: Adjust padding to prevent footer overlap

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -11,5 +11,6 @@ body {
 }
 
 main {
+  margin: 0 auto;
   flex-grow: 1;
 }
