--- a/src/app/shared/components/footer/footer.scss
+++ b/src/app/shared/components/footer/footer.scss
@@ -29,7 +29,7 @@ $white-agape: #f2ede4;
 
 @media (min-width: $desktop-breakpoint) {
   .footer {
-    padding: 20px 0px;
+    padding: 0;
 
     .copyright {
       font-size: 0.9em;
